fix speaker box on mobile safari

--- a/src/stylesheets/partials/_queries.sass
+++ b/src/stylesheets/partials/_queries.sass
@@ -179,10 +179,10 @@
 
   #speakers
     li
+      min-height: 0px
       border-top: 1px solid rgba(255, 255, 255, 0.1)
       height: auto
       margin: 0
-      min-height: auto
       padding-top: 10px
       text-align: left
       width: 100%
@@ -235,4 +235,5 @@
   nav#main li a
     font-size: 11px
   #speakers li
+    min-height: 0px
     margin: 0 5% 2em
